trunk/src/objects/TeamProfile__c.object
<CustomObject>
    <fields>
        <fullName>CreateBlogs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CreateBlogs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreateBookmarks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CreateBookmarks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreateDiscussionTopics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CreateDiscussionTopics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreateProjectTasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CreateProjectTasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreateWikiPages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CreateWikiPages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ManageAttachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Property used to control the permissions of the Team Profile with the management of the attachments.</description>
        <label>ManageAttachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ManageBlogs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ManageBlogs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ManageBookmarks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ManageBookmarks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ManageDiscussionForums__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ManageDiscussionForums</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ManageProjectTasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ManageProjectTasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ManageTeams__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ManageTeams</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ManageWikis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ManageWikis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PostBlogComments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PostBlogComments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PostBookmarkComments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PostBookmarkComments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PostDiscussionTopicReplies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PostDiscussionTopicReplies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PostWikiComments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PostWikiComments</label>
        <type>Checkbox</type>
    </fields>
    <label>Team Profile</label>
    <nameField>
        <label>Team Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team Profiles</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>